# ckanext-digitizationknowledge-theme

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/digitizationknowledge_theme/: cli.py  helpers.py  plugin.py  views.py
ckanext/digitizationknowledge_theme/assets/: script.js  style.css  style.css.map  webassets.yml
ckanext/digitizationknowledge_theme/assets/scss/: _bootstrap-variables.scss  _ckan.scss  _comments.scss  _custom.scss  _dataset.scss  _footer.scss  _forms.scss  _group.scss  _home-about.scss  _homepage.scss  _layout.scss  _masthead.scss  _media.scss  _mixins.scss  _module.scss  _nav.scss  _search.scss  _tables.scss  _toolbar.scss  _typography.scss  _variables.scss  main.scss
ckanext/digitizationknowledge_theme/assets/styles/: main.css  main.css.map
ckanext/digitizationknowledge_theme/logic/: action.py  auth.py  schema.py  validators.py
ckanext/digitizationknowledge_theme/public/base/css/: main.css
ckanext/digitizationknowledge_theme/templates/: base.html  footer.html  header.html  page.html
ckanext/digitizationknowledge_theme/templates/group/snippets/: group_item.html  info.html
ckanext/digitizationknowledge_theme/templates/home/: index.html
ckanext/digitizationknowledge_theme/templates/snippets/: additional_info.html  facet_list.html  package_item.html  tag_list.html
ckanext/digitizationknowledge_theme/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/digitizationknowledge_theme/tests/logic/: test_action.py  test_auth.py  test_validators.py
(+9 files in other folders)
