[project]
name = "ckanext-digitizationknowledge-theme"
version = "0.0.1"
description = "This ckan extension serves a design theme for Digitization Knowledge"
readme = "README.md"
authors = [
    {name = "Fritz J. Pichardo Marcano", email = "fpichardomarcano@fsu.edu"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "idigbio", "knowledgebase", "digitizationknowledge", "digitization", "biodiversity", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/iDigAcademy/ckanext-digitizationknowledge-theme"

[project.entry-points."ckan.plugins"]
digitizationknowledge_theme = "ckanext.digitizationknowledge_theme.plugin:DigitizationknowledgeThemePlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
